# COBRA

./: .coverage  Benchmarks.ipynb  Demo Notebook.ipynb  README.md  Using COBRA with custom weights.ipynb  pyproject.toml  test_cobra.py
.ipynb_checkpoints/: Demo Notebook-checkpoint.ipynb
LCDM/: LCDM.py
Utils/: cobra_helper.py  convert_units.py  extrapolate_pk.py  ir_resummed_power.py  no_wiggle_power.py  utilstest.ipynb
Utils/.ipynb_checkpoints/: cobra_helper-checkpoint.py  convert_units-checkpoint.py  ir_resummed_power-checkpoint.py  no_wiggle_power-checkpoint.py  sigma_squared_bao-checkpoint.py
cobra/LCDM/: LCDM.py  __init__.py
cobra/Utils/: __init__.py  cobra_error.py  cobra_helper.py  ir_resummed_power.py  no_wiggle_power.py  sigma_squared_bao.py
tests/: test_cobra.py
