#toml file for COBRA package

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.setuptools]
packages = ["cobra"]
find = {}  

[tool.setuptools.package_data]
"cobra" = ["*.dat","*.md"]  

[project]
name="cobra"
version="0.0.1"
authors=[{name="Thomas Bakx", email="t.j.m.bakx@uu.nl"},]
description="Package accompanying ArXiv:2407.04660"
readme="README.md"
requires-python=">=3.9" #for type hinting with lists
dependencies = ["numpy", "scipy"]
classifiers=["Programming Language :: Python :: 3","License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]


